完成基本功能
